{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "68c63ffc-1b8f-4a7f-96b2-7b9307460881",
            "actions": [
                {
                    "name": "Breaststroke",
                    "type": "Button",
                    "id": "72f97ad1-4a5f-4cb9-922f-aba7a133ed72",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TurnBack",
                    "type": "Button",
                    "id": "629064bc-dc4a-4706-a2ce-5743f930969d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ccf873b1-ba7a-4e2a-8e59-0f9469396501",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Breaststroke",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a887d8b0-6ce3-459e-b7f1-90a332234add",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Breaststroke",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "61bb63ad-aa42-4b33-9b3f-1c67f219c0d4",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurnBack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc39fe6c-697a-4c9e-9d4d-77c948ed33fe",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurnBack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}